[gd_scene load_steps=49 format=2]

[ext_resource path="res://Scenes/Tuuleton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kagu/kagu.png" type="Texture" id=2]
[ext_resource path="res://Assets/Kagu/kagu_walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Kagu/kagu_eat.png" type="Texture" id=4]
[ext_resource path="res://Assets/Kagu/kagu_look_up2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Kagu/kagu_look_up1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Kagu/kagu_chirp_up.png" type="Texture" id=7]
[ext_resource path="res://Assets/Kagu/kagu_run_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Kagu/kagu_run_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Kagu/kagu_fly_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Kagu/kagu_fly_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Kagu/kagu_tired_2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Kagu/kagu_tired_1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Kagu/wings_up.png" type="Texture" id=14]
[ext_resource path="res://Assets/Kagu/wings_up_mask.png" type="Texture" id=15]
[ext_resource path="res://Assets/Kagu/wings_down.png" type="Texture" id=16]
[ext_resource path="res://Assets/Kagu/wings_down_mask.png" type="Texture" id=17]
[ext_resource path="res://Assets/Kagu/kagu_dead.png" type="Texture" id=18]
[ext_resource path="res://BlinkMaterial.tres" type="Material" id=19]
[ext_resource path="res://Assets/Kagu/kagu_look_down2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Kagu/kagu_look_down1.png" type="Texture" id=21]

[sub_resource type="Animation" id=10]
resource_name = "Blink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/White")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/White")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "ChirpWalk"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 0 ), Vector2( 2, -3 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Eat"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "Fly1"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "Fly2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "LookDown"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/White")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "TiredWalk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "WonderWalk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 2.5 )

[sub_resource type="VisualShaderNodeScalarUniform" id=6]
uniform_name = "White"

[sub_resource type="VisualShaderNodeTexture" id=7]
source = 2

[sub_resource type="VisualShaderNodeVectorInterp" id=8]

[sub_resource type="VisualShaderNodeColorUniform" id=33]
uniform_name = "BlinkColor"

[sub_resource type="VisualShader" id=4]
code = "shader_type canvas_item;
uniform vec4 BlinkColor : hint_color;
uniform float White;



void vertex() {
// Output:0

}

void fragment() {
// Texture:7
	vec3 n_out7p0;
	float n_out7p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out7p0 = _tex_read.rgb;
		n_out7p1 = _tex_read.a;
	}

// ColorUniform:9
	vec3 n_out9p0 = BlinkColor.rgb;
	float n_out9p1 = BlinkColor.a;

// ScalarUniform:2
	float n_out2p0 = White;

// VectorMix:8
	vec3 n_out8p0 = mix(n_out7p0, n_out9p0, vec3(n_out2p0));

// Output:0
	COLOR.rgb = n_out8p0;
	COLOR.a = n_out7p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -795, 60 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 140, 320 )
nodes/fragment/2/node = SubResource( 6 )
nodes/fragment/2/position = Vector2( -400, 440 )
nodes/fragment/7/node = SubResource( 7 )
nodes/fragment/7/position = Vector2( -400, 180 )
nodes/fragment/8/node = SubResource( 8 )
nodes/fragment/8/position = Vector2( -60, 180 )
nodes/fragment/9/node = SubResource( 33 )
nodes/fragment/9/position = Vector2( -400, 320 )
nodes/fragment/connections = PoolIntArray( 2, 0, 8, 2, 8, 0, 0, 0, 7, 0, 8, 0, 9, 0, 8, 1, 7, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=34]
shader = SubResource( 4 )
shader_param/BlinkColor = Color( 1, 1, 1, 1 )
shader_param/White = 0.0

[sub_resource type="Animation" id=29]
resource_name = "Down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingMeterDisplay:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingMeterDisplay:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "Up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingMeterDisplay:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "Blink"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/White")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/White")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 8, 2.5 )

[node name="Tuuleton" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 19 )
texture = ExtResource( 2 )
offset = Vector2( 2, 0 )

[node name="Blink" type="AnimationPlayer" parent="Sprite"]
anims/Blink = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Move" type="AnimationPlayer" parent="Sprite"]
anims/ChirpWalk = SubResource( 24 )
anims/Die = SubResource( 32 )
anims/Eat = SubResource( 19 )
anims/Fly1 = SubResource( 25 )
anims/Fly2 = SubResource( 28 )
anims/LookDown = SubResource( 38 )
anims/RESET = SubResource( 20 )
anims/Run = SubResource( 26 )
anims/TiredWalk = SubResource( 27 )
anims/Walk = SubResource( 21 )
anims/WonderWalk = SubResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="Beak" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beak"]
position = Vector2( 2, 5.5 )
shape = SubResource( 2 )

[node name="FoodMeter" type="Node2D" parent="."]
position = Vector2( -9, 17 )

[node name="WingMeter" type="Sprite" parent="."]
material = SubResource( 34 )
position = Vector2( 58, -21 )
texture = ExtResource( 15 )

[node name="WingMeterDisplay" type="Sprite" parent="WingMeter"]
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WingMeter"]
anims/Down = SubResource( 29 )
anims/RESET = SubResource( 30 )
anims/Up = SubResource( 31 )

[node name="Blink" type="AnimationPlayer" parent="WingMeter"]
anims/Blink = SubResource( 35 )
anims/RESET = SubResource( 36 )

[node name="LookArea" type="Area2D" parent="."]

[node name="LookCollider" type="CollisionShape2D" parent="LookArea"]
position = Vector2( 12, 5.5 )
shape = SubResource( 37 )
